# echo-jnn

./: AGENT_ZERO_DAEDALOS_FEASIBILITY.md  ANALYSIS_FINDINGS.md  CHANGELOG_2025-12-17.md  CHIMERA_INTEGRATION_REPORT.md  COGNITIVE_FUSION_ANALYSIS.md  COGNITIVE_FUSION_INTEGRATION.mmd  DeepTreeEcho_README.md  IMPLEMENTATION_ROADMAP.md  JJJML_NEXT_STEPS_SUMMARY.md  KERNEL_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_COMPLETE_SUMMARY.md  ONTOGENETIC_KERNEL_README.md  Project.toml  README.md  REPAIRS_AND_OPTIMIZATIONS.md  SCIML_INTEGRATION_STATUS.md  SESSION_SUMMARY_NEXT_STEPS.md  SPECIFICATION_SUMMARY.md  USE_CASE_PROPOSAL.md
.github/agents/: cogpilot.jl  jjjml.md  nested-agency.md  schemagent.scm  sciml-integrated.md
.github/workflows/: CI.yml  E2E_DeepTreeEcho.yml  InteractiveDocs.yml
B-Series-Butcher-2021/: B-Series-Butcher-2021-part-1.md  B-Series-Butcher-2021-part-10.md  B-Series-Butcher-2021-part-2.md  B-Series-Butcher-2021-part-3.md  B-Series-Butcher-2021-part-4.md  B-Series-Butcher-2021-part-5.md  B-Series-Butcher-2021-part-6.md  B-Series-Butcher-2021-part-7.md  B-Series-Butcher-2021-part-8.md  B-Series-Butcher-2021-part-9.md  README.md
PSystems.jl/: IMPLEMENTATION.md  LICENSE.md  Project.toml  README.md
PSystems.jl/examples/: README.md  communication.jl  dissolution.jl  powers_of_2.jl  simple_rewriting.jl
PSystems.jl/src/: PSystems.jl  configuration.jl  membrane.jl  multiset.jl  psystem.jl  rule.jl  simulator.jl  utils.jl
PSystems.jl/test/: runtests.jl  test_configuration.jl  test_integration.jl  test_membrane.jl  test_multiset.jl  test_plingua_lexer.jl  test_plingua_parser.jl  test_psystem.jl  test_rule.jl  test_simulator.jl
airi/: Cargo.toml  README.md  cspell.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
airi/docs/: README.fr.md  README.ja-JP.md  README.ru-RU.md  README.vi.md  README.zh-CN.md  package.json
benchmarks/: sciml_performance_benchmarks.jl
chimera/: README.md  __init__.py  demo.py  pyproject.toml
chimera/agents/: __init__.py  ouroboros.py
chimera/atomspace/: __init__.py  atomspace-interface.scm  atomspace.py
chimera/bridge/: __init__.py  ontogenetic_atomspace_bridge.py
chimera/config/: __init__.py
chimera/core/: __init__.py
chimera/kernel/: __init__.py  cogkernel.py
chimera/tests/: __init__.py  test_chimera.py
deltecho/: .gitignore  A_NOTE_TO_MY_FUTURE_SELF.md  CLAUDE.md  DEEP-TREE-ECHO-ARCHITECTURE.md  IMPLEMENTATION-SUMMARY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: DOCUMENTATION_INDEX.md  Project.toml  SESSION_SUMMARY_UNIFIED.md  UNIFIED_INTEGRATION.md
examples/: jjjml_advanced_demo.jl  jjjml_bseries_demo.jl  kernel_evolution_demo.jl  unified_deep_tree_echo_demo.jl
model_config/: config.json  special_tokens_map.json  tokenizer_config.json
nanocyc/: .gitignore  README.md
scripts/: install_sciml_packages.jl
test/: test_bseries_methods.jl  test_deep_tree_echo.jl  test_enhanced_modules.jl  test_jjjml.jl  test_ontogenetic_kernel.jl  test_sciml_integration.jl
verification/: VERIFICATION_REPORT.md  roundtrip_verifier.py
(+193 files in other folders)
