[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "1.0.0"
description = "Project Chimera: Cognitive Fusion Framework for Agent-Zero and Daedalos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chimera Project", email = "chimera@cogpy.org"}
]
keywords = [
    "artificial-intelligence",
    "cognitive-architecture",
    "agent-zero",
    "atomspace",
    "ontogenetic",
    "relevance-realization",
    "daedalos",
    "cognitive-os"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "asyncio-throttle>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0"
]
full = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2"
]

[project.urls]
Homepage = "https://github.com/o9nn/echo-jnn"
Documentation = "https://echo-jnn.readthedocs.io"
Repository = "https://github.com/o9nn/echo-jnn"
Issues = "https://github.com/o9nn/echo-jnn/issues"

[project.scripts]
chimera = "chimera.cli:main"
ouroboros = "chimera.agents.ouroboros:main"
cogkernel = "chimera.kernel.cogkernel:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chimera*"]

[tool.setuptools.package-data]
chimera = ["*.scm", "*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["chimera"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=chimera --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.coverage.run]
source = ["chimera"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
